force-app/main/default/objects/Contract/fields/Active_Budget__c.field-meta.xml
<CustomField>
    <fullName>Active_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the active budget for this contract</inlineHelpText>
    <label>Active Budget</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>