force-app/main/default/objects/Contract/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <formula>TEXT ( Application__r.Activity_Category__c )</formula>
    <label>Activity Category</label>
    <type>Text</type>
</CustomField>