force-app/main/default/objects/Contract/fields/Activity_Special_Condition_Clause__c.field-meta.xml
<CustomField>
    <fullName>Activity_Special_Condition_Clause__c</fullName>
    <inlineHelpText>Enter the Activity Special Condition Clause here to drive the language on the contract document.</inlineHelpText>
    <label>Activity Special Condition Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>