force-app/main/default/objects/Contract/fields/AvailableAmount__c.field-meta.xml
<CustomField>
    <fullName>AvailableAmount__c</fullName>
    <formula>Total_Funding__c -( 
Total_Disbursed__c+ 
 Total_Pending_Disbursements__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Allocation Less Total Disbursed Less Total Pending Disbursement</inlineHelpText>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>