force-app/main/default/objects/Contract/fields/AwardeeAddress__c.field-meta.xml
<CustomField>
    <fullName>AwardeeAddress__c</fullName>
    <formula>Account.BillingStreet &amp;&quot; &quot;&amp;
 Account.BillingCity &amp;&quot;, &quot;&amp;
 Account.BillingState &amp;&quot; &quot;&amp;
 Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awardee Address</label>
    <type>Text</type>
</CustomField>