force-app/main/default/objects/Contract/fields/AwardeePhone__c.field-meta.xml
<CustomField>
    <fullName>AwardeePhone__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AwardeePhone</label>
    <type>Text</type>
</CustomField>