force-app/main/default/objects/Contract/fields/CBISentTax__c.field-meta.xml
<CustomField>
    <fullName>CBISentTax__c</fullName>
    <label>CBI Sent (Tax)</label>
    <type>Date</type>
</CustomField>