force-app/main/default/objects/Contract/fields/Client_Status_as_a__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_as_a__c</fullName>
    <inlineHelpText>this feeds the limited clientele/presumed  activity special condition</inlineHelpText>
    <label>Client Status as a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>elderly person</fullName>
            </value>
            <value>
                <fullName>homeless person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>