force-app/main/default/objects/Contract/fields/CloseoutComments__c.field-meta.xml
<CustomField>
    <fullName>CloseoutComments__c</fullName>
    <label>Closeout Comments</label>
    <type>TextArea</type>
</CustomField>