force-app/main/default/objects/Contract/fields/CloseoutCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>CloseoutCompleteDate__c</fullName>
    <label>Closeout Complete Date</label>
    <type>Date</type>
</CustomField>