force-app/main/default/objects/Contract/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Upto 255 characters.  If need more, add a note in activities.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>