force-app/main/default/objects/Contract/fields/Community_Based_Dev_Organization__c.field-meta.xml
<CustomField>
    <fullName>Community_Based_Dev_Organization__c</fullName>
    <label>Community Based Dev Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>