force-app/main/default/objects/Contract/fields/Contract_Budget_Table__c.field-meta.xml
<CustomField>
    <fullName>Contract_Budget_Table__c</fullName>
    <inlineHelpText>Per unit will select the reimbusement table to display on the contract.  Actual will show the Expense Budget Categories</inlineHelpText>
    <label>Contract Budget Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>