force-app/main/default/objects/Contract/fields/Contract_Documents_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Contract_Documents_Checklist_Complete__c</fullName>
    <inlineHelpText>Date that all contract documents have been completed</inlineHelpText>
    <label>Contract Documents Checklist Complete</label>
    <type>Date</type>
</CustomField>