force-app/main/default/objects/Contract/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <inlineHelpText>Contract number as supplied by the finance team, max 35 characters, alphanumeric.</inlineHelpText>
    <label>Contract Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>