force-app/main/default/objects/Contract/fields/ContractExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExecutedDate__c</fullName>
    <label>Contract Executed Date</label>
    <type>Date</type>
</CustomField>