force-app/main/default/objects/Contract/fields/ContractNumberLink__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Contract_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>