force-app/main/default/objects/Contract/fields/ContractRecievedfromOA__c.field-meta.xml
<CustomField>
    <fullName>ContractRecievedfromOA__c</fullName>
    <label>Contract Recieved from OA</label>
    <type>Date</type>
</CustomField>