force-app/main/default/objects/Contract/fields/ContractSenttoOA__c.field-meta.xml
<CustomField>
    <fullName>ContractSenttoOA__c</fullName>
    <label>Contract Sent to OA</label>
    <type>Date</type>
</CustomField>