force-app/main/default/objects/Contract/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Document checklist Started</fullName>
            </value>
            <value>
                <fullName>Contract Document Checklist Complete</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>