force-app/main/default/objects/Contract/fields/Cost_per_SqFt_frm__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_SqFt_frm__c</fullName>
    <formula>TotalSqFt__c /  Total_Development_Costs__c</formula>
    <inlineHelpText>Formula for cost per square feet</inlineHelpText>
    <label>Cost per Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>