force-app/main/default/objects/Contract/fields/Cost_per_Unit_frm__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Unit_frm__c</fullName>
    <formula>Total_Development_Costs__c /  Total_Units__c</formula>
    <inlineHelpText>Formula for cost per unit</inlineHelpText>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>