force-app/main/default/objects/Contract/fields/CRO_Status__c.field-meta.xml
<CustomField>
    <fullName>CRO_Status__c</fullName>
    <label>CRO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Start</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>