force-app/main/default/objects/Contract/fields/ED_Signed__c.field-meta.xml
<CustomField>
    <fullName>ED_Signed__c</fullName>
    <label>ED Signed</label>
    <type>Date</type>
</CustomField>