force-app/main/default/objects/Contract/fields/Eligible_Activity__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Activity__c</fullName>
    <inlineHelpText>(CDBG) program, administered by the U.S. Department of Housing and Urban Development (HUD), supports a range of activities aimed at improving the quality of life for low- and moderate-income individuals and families in communities across the United States. Eligible activities for CDBG grants fall into several categories.</inlineHelpText>
    <label>Eligible Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Housing Development</fullName>
            </value>
            <value>
                <fullName>Public Facilities and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Economic Development Initiatives</fullName>
            </value>
            <value>
                <fullName>Public Services</fullName>
            </value>
            <value>
                <fullName>Planning and Administration</fullName>
            </value>
            <value>
                <fullName>Program Income</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery and Resilience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>