force-app/main/default/objects/Contract/fields/Entered_into_IDIS__c.field-meta.xml
<CustomField>
    <fullName>Entered_into_IDIS__c</fullName>
    <label>Entered into IDIS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>