force-app/main/default/objects/Contract/fields/EnvironmentalApproved__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentalApproved__c</fullName>
    <label>Environmental Approved</label>
    <type>Date</type>
</CustomField>