force-app/main/default/objects/Contract/fields/ERR_Comments__c.field-meta.xml
<CustomField>
    <fullName>ERR_Comments__c</fullName>
    <inlineHelpText>Add HEROES number and comments to the ERR status or dates as needed here.</inlineHelpText>
    <label>ERR Comments</label>
    <type>TextArea</type>
</CustomField>