force-app/main/default/objects/Contract/fields/ERR_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>ERR_Ordered_Date__c</fullName>
    <inlineHelpText>Date that the ERR (Environmental Review) has been ordered for this project.</inlineHelpText>
    <label>ERR Ordered Date</label>
    <type>Date</type>
</CustomField>