force-app/main/default/objects/Contract/fields/ERR_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ERR_Received_Date__c</fullName>
    <inlineHelpText>Date the ERR has been received.</inlineHelpText>
    <label>ERR Received Date</label>
    <type>Date</type>
</CustomField>