force-app/main/default/objects/Contract/fields/ERR_Status__c.field-meta.xml
<CustomField>
    <fullName>ERR_Status__c</fullName>
    <description>Tracks the current status of the Environmental Review for the associated Contract.</description>
    <label>ERR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>