force-app/main/default/objects/Contract/fields/Final6ContractsRouted__c.field-meta.xml
<CustomField>
    <fullName>Final6ContractsRouted__c</fullName>
    <label>Final 6 Contracts Routed</label>
    <type>Date</type>
</CustomField>