force-app/main/default/objects/Contract/fields/Final_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection__c</fullName>
    <label>Final Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>