force-app/main/default/objects/Contract/fields/Final_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_Date__c</fullName>
    <inlineHelpText>Date of the final inspection</inlineHelpText>
    <label>Final Inspection Date</label>
    <type>Date</type>
</CustomField>