force-app/main/default/objects/Contract/fields/FinalDraftofContractRouted__c.field-meta.xml
<CustomField>
    <fullName>FinalDraftofContractRouted__c</fullName>
    <label>Final Draft of Contract Routed</label>
    <type>Date</type>
</CustomField>