force-app/main/default/objects/Contract/fields/FirstDraftofContractRouted__c.field-meta.xml
<CustomField>
    <fullName>FirstDraftofContractRouted__c</fullName>
    <label>First Draft of Contract Routed</label>
    <type>Date</type>
</CustomField>