force-app/main/default/objects/Contract/fields/FiscalMonitor__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Monitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>