force-app/main/default/objects/Contract/fields/Helper_number_of_days_in_contract__c.field-meta.xml
<CustomField>
    <fullName>Helper_number_of_days_in_contract__c</fullName>
    <description>Used for Congo on contracts for number of days in contract</description>
    <formula>(EndDate -  StartDate) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helper number of days in contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>