force-app/main/default/objects/Contract/fields/IDIS_Matrix_Code__c.field-meta.xml
<CustomField>
    <fullName>IDIS_Matrix_Code__c</fullName>
    <label>IDIS Matrix Code</label>
    <type>TextArea</type>
</CustomField>