force-app/main/default/objects/Contract/fields/IDIS_Number__c.field-meta.xml
<CustomField>
    <fullName>IDIS_Number__c</fullName>
    <label>IDIS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>