force-app/main/default/objects/Contract/fields/Level_of_Environmental_Review__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Environmental_Review__c</fullName>
    <label>Level of Environmental Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>CENST (Categorically Excluded Not Subject To)</fullName>
            </value>
            <value>
                <fullName>CEST (Categorically Excluded Subject To)</fullName>
            </value>
            <value>
                <fullName>EA (Environmental Assessment)</fullName>
                <isActive>false</isActive>
                <label>EA (Environmental Assessment)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>