force-app/main/default/objects/Contract/fields/National_Objective__c.field-meta.xml
<CustomField>
    <fullName>National_Objective__c</fullName>
    <formula>TEXT(Application__r.National_Objective__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This was the National Objective flattened from a question on the application.  This formula field is showing the field from the application</inlineHelpText>
    <label>National Objective (Application)</label>
    <type>Text</type>
</CustomField>