force-app/main/default/objects/Contract/fields/National_Objective_Clause__c.field-meta.xml
<CustomField>
    <fullName>National_Objective_Clause__c</fullName>
    <inlineHelpText>Enter the Contract National Objective Clause here to drive the language on the contract document.</inlineHelpText>
    <label>National Objective Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>