force-app/main/default/objects/Contract/fields/National_Objective_Contract__c.field-meta.xml
<CustomField>
    <fullName>National_Objective_Contract__c</fullName>
    <inlineHelpText>Select the National Objective option to drive the clause langage on the contract.</inlineHelpText>
    <label>National Objective (Contract)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LMC – Family Size and Income (Public)</fullName>
            </value>
            <value>
                <fullName>LMC – Family Size and Income (Econ)</fullName>
            </value>
            <value>
                <fullName>LMC – Presumed</fullName>
            </value>
            <value>
                <fullName>LMA – City Wide</fullName>
            </value>
            <value>
                <fullName>LMA – Neighborhood-Based</fullName>
            </value>
            <value>
                <fullName>LMJ  - Creation/Retention</fullName>
            </value>
            <value>
                <fullName>Planning/Admin</fullName>
            </value>
            <value>
                <fullName>Public Improvements</fullName>
            </value>
            <value>
                <fullName>LMC - Nature</fullName>
            </value>
            <value>
                <fullName>Low-Mod Income - Area Benefit</fullName>
            </value>
            <value>
                <fullName>Low/Mod Income-Assumption</fullName>
            </value>
            <value>
                <fullName>LMI-Limited Clientele (Presumed)</fullName>
            </value>
            <value>
                <fullName>Low/Mod Income – Limited Clientele</fullName>
            </value>
            <value>
                <fullName>Low/Mod Housing</fullName>
            </value>
            <value>
                <fullName>Urgent Needs</fullName>
                <isActive>false</isActive>
                <label>Urgent Needs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>