force-app/main/default/objects/Contract/fields/of_Residents_are_LMI__c.field-meta.xml
<CustomField>
    <fullName>of_Residents_are_LMI__c</fullName>
    <inlineHelpText>this feeds the contract clause language for Nationa objective LMA Neighborhood Based</inlineHelpText>
    <label>% of Residents are LMI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>