force-app/main/default/objects/Contract/fields/OracleNumber__c.field-meta.xml
<CustomField>
    <fullName>OracleNumber__c</fullName>
    <label>Oracle Number</label>
    <length>65</length>
    <type>Text</type>
</CustomField>