force-app/main/default/objects/Contract/fields/Ordinance_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordinance_Date__c</fullName>
    <inlineHelpText>Appropriating Ordinance Date</inlineHelpText>
    <label>Ordinance Date</label>
    <type>Date</type>
</CustomField>