force-app/main/default/objects/Contract/fields/ParentProgram__c.field-meta.xml
<CustomField>
    <fullName>ParentProgram__c</fullName>
    <formula>Program__r.ParentProgram.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>