force-app/main/default/objects/Contract/fields/Program_Eligibility_Clause__c.field-meta.xml
<CustomField>
    <fullName>Program_Eligibility_Clause__c</fullName>
    <inlineHelpText>Enter the Program Eligibility Clause here to drive the language on the contract document.</inlineHelpText>
    <label>Program Eligibility Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>