force-app/main/default/objects/Contract/fields/ProgramMonitor__c.field-meta.xml
<CustomField>
    <fullName>ProgramMonitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Monitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>