force-app/main/default/objects/Contract/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the property Managers Account</inlineHelpText>
    <label>Property Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>