force-app/main/default/objects/Contract/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grantee</fullName>
            </value>
            <value>
                <fullName>Subgrantee</fullName>
            </value>
            <value>
                <fullName>Subrecipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>