force-app/main/default/objects/Contract/fields/Residential__c.field-meta.xml
<CustomField>
    <fullName>Residential__c</fullName>
    <inlineHelpText>This feeds the clause language on the contract for National Objective LMA Neighborhood Based</inlineHelpText>
    <label>% Residential</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>