force-app/main/default/objects/Contract/fields/RiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessment__c</fullName>
    <label>Risk Assessment</label>
    <type>Date</type>
</CustomField>