force-app/main/default/objects/Contract/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <description>Enter the Site Address(es) here. Use a new line for each address. This information will be pulled into the contract document.</description>
    <label>Site Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>