force-app/main/default/objects/Contract/fields/TAVisit__c.field-meta.xml
<CustomField>
    <fullName>TAVisit__c</fullName>
    <label>TA Visit</label>
    <type>Date</type>
</CustomField>