force-app/main/default/objects/Contract/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName>
    <inlineHelpText>This is the total amount disbursed or drawn for this contract, this includes advances.</inlineHelpText>
    <label>Total Disbursed/Drawn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>