force-app/main/default/objects/Contract/fields/Total_Expended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expended_Amount__c</fullName>
    <inlineHelpText>This is the total expended, excluded advances, sum of expenditures as reported ytd and drawdowns.</inlineHelpText>
    <label>Total Expended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>