force-app/main/default/objects/Contract/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <inlineHelpText>This is the current Contract allocation.  This is originally brought over from the Award Amount on the Project when the start contracting button has been pushed to start the contracting process.  Funding the contract sill needs to happen.</inlineHelpText>
    <label>Contract Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>