force-app/main/default/objects/Contract/fields/Total_Pending_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Disbursements__c</fullName>
    <inlineHelpText>This is the total of Disbursements pending approval</inlineHelpText>
    <label>Total Pending Disbursements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>