force-app/main/default/objects/Contract/fields/X10_Holdback__c.field-meta.xml
<CustomField>
    <fullName>X10_Holdback__c</fullName>
    <formula>IF( RecordType.DeveloperName =&quot;CDAProgrammatic&quot;,0,
IF(ISPICKVAL(Final_Inspection__c,&quot;Complete&quot;),0,


Total_Funding__c *(10/100)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10% Holdback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>