force-app/main/default/objects/Contract/recordTypes/CDAHousing.recordType-meta.xml
<RecordType>
    <fullName>CDAHousing</fullName>
    <active>true</active>
    <label>CDA Housing</label>
</RecordType>