force-app/main/default/objects/Contract/recordTypes/CDAProgramatic.recordType-meta.xml
<RecordType>
    <fullName>CDAProgramatic</fullName>
    <active>true</active>
    <label>CDA Programatic</label>
</RecordType>